<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">MiniProjetAndroid</string>
    <string name="menu">Menu</string>
    <string name="fac">Ma Fac</string>
    <string name="cours">Mes Cours</string>
    <string name="config">Configuration</string>
    <string name="geoloc">Géolocalisation</string>
    <string name="occupRU">Occuparations des RUs</string>
    <string name="anomalie">Détection des anomalies</string>
    <string name="schedule">Emplois du temps</string>
    <string name="infos">Informations</string>

    <string name="action_photo">Prendre photo</string>

    <string name="action_upload">Upload photo</string>

    <string-array name="criticite">
        <item>Confort</item>
        <item>Problème</item>
        <item>Danger</item>
    </string-array>

    <string-array name="menu">
        <item>Ma Fac</item>
        <item>Mes Cours</item>
        <item>Configuration</item>
    </string-array>

    <!-- User settings -->
    <string name="pref_header_user">Paramètres utilisateur</string>
    <string name="pref_header_system">Paramètres système</string>

    <!--<string name="pref_title_username">Nom d\'utilisateur</string>
    <string name="pref_default_username">John DOE</string>-->

    <string name="pref_title_email">Email</string>
    <string name="pref_default_email">example@email.com</string>

    <string name="pref_title_password">Mot de passe</string>
    <string name="pref_default_password">*******</string>

    <string name="pref_title_url">URL emploi du temps</string>
    <string name="pref_default_url">http://example.com, http://mon-emploi-du-temps.fr</string>
    <string name="pref_error_url">"URL inconnue, consultez vos configurations"</string>

    <!-- Settings for Brightness -->
    <string name="pref_title_brightness">Luminosité</string>
    <string name="pref_default_brightness">100</string>

    <!-- Settings for Sound -->
    <string name="pref_title_sound">Son</string>
    <string name="pref_default_sound">100</string>


    <string name="menu_settings">Settings</string>
    <string name="settings_unit"></string>
    <string name="settings_title">Here comes the title</string>
</resources>
